--- a/Survey/source/styles/informal/_o-question-slider.scss
+++ b/Survey/source/styles/informal/_o-question-slider.scss
@@ -25,6 +25,7 @@
 .o-question-slider-vertical-control {
     transform: rotate(270deg);
     transform-origin: top;
+    justify-content: flex-end;
 }
 
 .o-question-slider-horizontal-control,
